namespaces/apps/home-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
    name: home-assistant

spec:
    replicas: 1
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: home-assistant
    template:
        metadata:
            labels:
                app: home-assistant
        spec:
            enableServiceLinks: false
            containers:
                - name: home-assistant
                  image: ghcr.io/home-assistant/home-assistant:2026.9.1@sha256:612d76760b544cb40b7ba01387fdac964c59a6a550a50a4d30b4773c822d2918
                  ports:
                      - name: http
                        containerPort: 8123
                  resources:
                      requests:
                          cpu: 200m
                          memory: 512Mi
                      limits:
                          memory: 2Gi
                  volumeMounts:
                      - name: home-assistant
                        mountPath: /config
                      - name: home-assistant-config
                        mountPath: /config/configuration.yaml
                        subPath: configuration.yaml
                        readOnly: true
            volumes:
                - name: home-assistant
                  hostPath:
                      path: /var/data/local/home-assistant
                      type: Directory
                - name: home-assistant-config
                  configMap:
                      name: home-assistant-config
