namespaces/apps/home-assistant/service.yaml
apiVersion: v1
kind: Service

metadata:
    name: home-assistant

spec:
    selector:
        app: home-assistant
    ports:
        - name: http
          port: 8123
          targetPort: http
    type: ClusterIP
