namespaces/apps/home-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
    name: home-assistant
    annotations:
        traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
    ingressClassName: traefik
    rules:
        - host: home-assistant.wacky.homes
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: home-assistant
                            port:
                                name: http
        - host: home-assistant.wacky.local
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: home-assistant
                            port:
                                name: http
